--- a/resume.tex
+++ b/resume.tex
@@ -9,11 +9,13 @@ C, C++, Python, Ruby, Matlab, SQL, Javascript, Actionscript, Bash, Perl, Java, C
 
 Things I have built:
 
-A series of AppEngine sites I built for Google:
+A series of AppEngine sites for Google:
   Chrome Experiments: (http://chromeexperiments.com) The center for innovative javascript experiments on the web.
   What Browser: (http://whatbrowser.org) An educational site for people who don't know what a web browser is!
 
-Interface CMS (http://getinterface.com):  A CMS I built to be a support infrastructure for a series of diverse sites, solving each problem once so that all the sites could benefit from it.  Later it became a product in its own right!  Here are some of the sites that run on Interface:
+Interface CMS (http://getinterface.com):  A CMS I built to be a support infrastructure for a series of diverse sites, solving each problem in a way so that all the sites, and eventually services, could benefit from it.  Flexibility paired with a clean conceptual approach.  Later it became a product in its own right!
+
+Here are some of the sites that I helped develop while improving Interface:
   Uncommon: (http://getuncommon.com) Customize your own iphone case with any image you want.
   Rethink What Matters (Bare Escentuals): (http://rethinkwhatmatters.com) A quiz and contest site for the popular cosmetic company.
   Ziba: (http://ziba.com) A tasteful and subtly technical site for the local design tribe.
@@ -25,14 +27,14 @@ Interface CMS (http://getinterface.com):  A CMS I built to be a support infrastr
   Invisible Creature: (http://invisiblecreature.com)
   ... and many more (see the getinterface.com site for more examples).
 
-Some of the challenges I have solved under the penumbra of Interface:
+Some of the challenges I have conquered:
   Designing an endlessly flexible framework for defining models and associations that could take on a specific form custom tailored to the data entailed by each site.
-  Designing a compact query language with urls to fetch data meeting particular criteria across associations, and translating those queries to raw, ruthlessly optimized SQL.
+  Designing a compact query language to fetch data meeting particular criteria across associations, and translating those queries to raw, ruthlessly optimized SQL.
   Server scaling and the implementation of an nginx module for hashing image queries to cache images down to the bare metal. 
 
 Employment
 
-October 2007-Present  Senior Software Engineer, Instrument, Portland OR.  At Instrument I have run the whole gamut of roles and duties, doing anything and everything no one else could do.  By building InterfaceCMS under their employ, I automated many of the duties that had to be performed manually before.  
+October 2007-Present  Senior Software Engineer, Instrument, Portland OR.  At Instrument I have run the whole gamut of roles and duties, doing anything and everything no one else could do.  By building a generalized framework, I automated many of the programming tasks and duties that had to be performed manually before.  
 
 May 2006-October 2007  Software Engineer, Performance Logic, Portland OR.  I was hired by this company because they had a bug list 600 items long.  In the course of my time there I took a substantial portion of the things they were doing fifteen different ways in fifteen different places and gathered them into a sensible, coherent system.
 
