working on calcium channel simulation

--- a/computationalneuroscience/tex/assignment2.tex
+++ b/computationalneuroscience/tex/assignment2.tex
@@ -132,4 +132,10 @@ You will notice that the state variable n depends on both the voltage and the ca
 
 \vspace{10pt}
 
+Varying only the calcium-dependent potassium channel without activating the transient calcium channel has no effect, as no calcium is flowing in to activate the potassium channel.  
+
+Varying both the transient calcium channel and calcium-dependent potassium channel conductances in tandem produces the following behavior:
+
+\includegraphics[scale=0.7]{kca.png}
+
 \end{document}
